# presas-mexico

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: daily_update.yml  validate.yml
data/catalog/: catalogo_crudo.xls  sinav_reporte.json
export/: parquet_writer.py
ingest/: fetch_backfill.py  fetch_incremental.py  raw_to_duckdb.py
presas_mx_dbt/: .user.yml  dbt_project.yml  profiles.yml
presas_mx_dbt/models/marts/: _schema.yml  dim_presa.sql  fct_presa_diario.sql  snapshot_actual.sql
presas_mx_dbt/models/staging/: _sources.yml  stg_catalogo.sql  stg_presas_diario.sql
presas_mx_dbt/seeds/: presas_catalogo.csv  properties.yml
scripts/: build_seed.py  enrich_catalog_capacity.py
