[project]
name = "presas-mexico"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "boto3>=1.43.36",
    "dbt-duckdb>=1.10.1",
    "html5lib>=1.1",
    "httpx>=0.28.1",
    "lxml>=6.1.1",
    "numpy>=2.5.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.2",
    "xlrd>=2.0.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
